<resources>
    <string name="app_name">Watched It</string>
    <string name="action_about">About</string>
    <string name="label_title">Title</string>
    <string name="label_type">Type</string>
    <string name="type_movie">Movie</string>
    <string name="type_tv_show">TV Show</string>
    <string name="label_date_watched">Date watched</string>
    <string name="label_rating">Rating</string>
    <string name="label_notes">Notes</string>
    <string name="close">Close</string>
    <string-array name="types_array">
        <item>Movie</item>
        <item>TV Show</item>
        <item>Concert</item>
        <item>Show</item>
        <item>Play</item>
        <item>Comedy</item>
    </string-array>
    <string name="title_activity_view_entertainment">ViewEntertainmentActivity</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
</resources>
